@@ -450,18 +450,31 @@ gtk_im_context_filter_keypress (GtkIMContext *context,
  * hildon_gtk_im_context_filter_event:
  * @context: a #GtkIMContext
  * @event: the event
- * 
+ *
  * Allow an input method to internally handle an event.
  * If this function returns %TRUE, then no further processing
- * should be done for this event. The widget should at least
- * pass all events which are directly generated by user action,
- * such as key and button press and release events, to this function.
- * 
+ * should be done for this event.
+ *
+ * <note><para>
+ * Input methods must be able to accept all types of events (simply
+ * returning %FALSE if the event was not handled), but there is no
+ * obligation for a widget to submit any events to this function.
+ * </para><para>
+ * Widget events that are recommended to be run through this function
+ * are %GDK_BUTTON_PRESS, %GDK_BUTTON_RELEASE, %GDK_2BUTTON_PRESS,
+ * %GDK_3BUTTON_PRESS, %GDK_KEY_PRESS and %GDK_KEY_RELEASE.
+ * </para><para>
+ * Note that if the event passes the filter with the function returning
+ * %FALSE, the widget still needs to process the event itself, this can
+ * include calling gtk_im_context_focus_in(), gtk_im_context_focus_out()
+ * or gtk_im_context_filter_keypress() for focus and keypress events
+ * where applicable.
+ * </para></note>
+ *
  * Return value: %TRUE if the input method handled the event.
  *
  * Since: maemo 2.0
- *
- **/
+ */
 gboolean
 hildon_gtk_im_context_filter_event (GtkIMContext *context,
 				    GdkEvent     *event)
