@@ -1,3 +1,8 @@
+2006-04-05  Tomas Junnonen  <tomas.junnonen@nokia.com>
+
+	* gtk/tmpl/gtkimcontext.sgml: Add an example for using filter
+	functions.
+
 2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* gtk/tmpl/gtkeditable.sgml (insert-text): Document special, modified
