@@ -1,3 +1,8 @@
+2006-04-05  Tomas Junnonen  <tomas.junnonen@nokia.com>
+	
+	* gtk/gtkimcontext.c (hildon_gtk_im_context_filter_event): Improve
+	documentation.
+
 2006-04-05  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup):
